--- a/estilo.css
+++ b/estilo.css
@@ -67,6 +67,7 @@ iframe {
 .portfolio {
   margin-top: 60px;
   padding: 20px;
+  max-width: 300px;
   background-color: #0f2438;
   border-radius: 12px;
   box-shadow: 0 0 20px rgba(0,0,0,0.2);
