--- a/estilo.css
+++ b/estilo.css
@@ -67,7 +67,6 @@ iframe {
 .portfolio {
   margin-top: 60px;
   padding: 20px;
-  max-width: 300px;
   background-color: #0f2438;
   border-radius: 12px;
   box-shadow: 0 0 20px rgba(0,0,0,0.2);
@@ -90,7 +89,8 @@ iframe {
   background-color: #132c44;
   padding: 15px;
   border-radius: 10px;
-  max-width: 300px;
+   margin-top: 60px;
+  padding: 20px;
   box-shadow: 0 0 10px rgba(244, 196, 48, 0.3);
 }
 
